@@ -1,0 +1,7 @@
+-- Stratagus Map Presentation
+-- File generated by the Bos Wars builtin editor.
+-- File licensed under the GNU GPL version 2 or later.
+
+DefinePlayerTypes("person", "person", "person", "person")
+PresentMap("They struggled to make their big guns, and now they're in clover.", 4, 80, 80, 4)
+DefineMapSetup(GetCurrentLuaPath().."/setup.sms")
