@@ -1,0 +1,405 @@
+-- terrain
+patch("gosh-terrain2036", 0, 0)
+patch("gosh-terrain2032", 0, 4)
+patch("gosh-terrain2044", 0, 12)
+patch("gosh-terrain2040", 4, 0)
+patch("gosh-terrain2041", 8, 0)
+patch("gosh-terrain2052", 12, 0)
+patch("gosh-terrain2037", 16, 0)
+patch("gosh-terrain2039", 0, 16)
+patch("gosh-terrain2051", 4, 16)
+patch("gosh-terrain2049", 16, 4)
+patch("gosh-terrain2044", 4, 20)
+patch("gosh-terrain2035", 4, 24)
+patch("gosh-terrain2032", 4, 28)
+patch("gosh-terrain2040", 20, 4)
+patch("gosh-terrain2041", 24, 4)
+patch("gosh-terrain2052", 28, 4)
+patch("gosh-terrain2037", 32, 4)
+patch("gosh-terrain2039", 4, 32)
+patch("gosh-terrain2042", 8, 32)
+patch("gosh-terrain2043", 12, 32)
+patch("gosh-terrain2055", 16, 32)
+patch("gosh-terrain2054", 20, 32)
+patch("gosh-terrain2033", 32, 8)
+patch("gosh-terrain2034", 32, 12)
+patch("gosh-terrain2046", 32, 16)
+patch("gosh-terrain2047", 32, 20)
+patch("gosh-terrain2038", 32, 24)
+patch("gosh-terrain2038", 24, 32)
+patch("gosh-terrain2039", 28, 24)
+patch("gosh-terrain2037", 24, 28)
+patch("gosh-terrain2049", 20, 28)
+patch("gosh-terrain2051", 28, 20)
+patch("gosh-05", 28, 16)
+patch("gosh-05", 28, 12)
+patch("gosh-05", 28, 8)
+patch("gosh-05", 24, 8)
+patch("gosh-05", 8, 28)
+patch("gosh-05", 12, 28)
+patch("gosh-05", 16, 28)
+patch("gosh-05", 8, 24)
+patch("gosh-05", 4, 4)
+patch("gosh-05", 8, 20)
+patch("gosh-05", 20, 8)
+patch("gosh-terrain2028", 20, 24)
+patch("gosh-terrain2030", 24, 20)
+patch("gosh-terrain2041", 16, 24)
+patch("gosh-terrain2032", 24, 16)
+patch("gosh-terrain2051", 24, 12)
+patch("gosh-terrain2049", 12, 24)
+patch("gosh-terrain2047", 12, 20)
+patch("gosh-terrain2042", 20, 12)
+patch("gosh-terrain2039", 16, 12)
+patch("gosh-terrain2037", 12, 16)
+patch("gosh-terrain2051", 16, 8)
+patch("gosh-terrain2049", 8, 16)
+patch("gosh-terrain2028", 8, 12)
+patch("gosh-terrain2030", 12, 8)
+patch("gosh-terrain2049", 4, 12)
+patch("gosh-terrain2051", 12, 4)
+patch("gosh-terrain2050", 8, 4)
+patch("gosh-terrain2050", 4, 8)
+patch("gosh-terrain2038", 8, 8)
+patch("gosh-06", 12, 12)
+patch("gosh-06", 16, 16)
+patch("gosh-06", 20, 16)
+patch("gosh-06", 16, 20)
+patch("gosh-06", 20, 20)
+patch("gosh-06", 24, 24)
+patch("gosh-06", 28, 28)
+patch("gosh-06", 20, 0)
+patch("gosh-06", 0, 20)
+patch("gosh-06", 0, 24)
+patch("gosh-06", 24, 0)
+patch("gosh-06", 36, 20)
+patch("gosh-06", 40, 20)
+patch("gosh-terrain2032", 44, 20)
+patch("gosh-terrain2039", 44, 24)
+patch("gosh-terrain2044", 44, 16)
+patch("gosh-terrain2045", 44, 12)
+patch("gosh-terrain2035", 44, 8)
+patch("gosh-terrain2036", 44, 4)
+patch("gosh-terrain2040", 48, 4)
+patch("gosh-terrain2041", 52, 4)
+patch("gosh-terrain2052", 56, 4)
+patch("gosh-terrain2048", 60, 4)
+patch("gosh-terrain2029", 60, 0)
+patch("gosh-terrain2041", 64, 0)
+patch("gosh-terrain2040", 68, 0)
+patch("gosh-terrain2052", 72, 0)
+patch("gosh-terrain2037", 76, 0)
+patch("gosh-terrain2046", 76, 4)
+patch("gosh-terrain2047", 76, 8)
+patch("gosh-terrain2033", 76, 12)
+patch("gosh-terrain2031", 48, 24)
+patch("gosh-terrain2050", 48, 20)
+patch("gosh-terrain2038", 52, 20)
+patch("gosh-terrain2033", 52, 16)
+patch("gosh-terrain2050", 52, 12)
+patch("gosh-terrain2042", 56, 12)
+patch("gosh-terrain2038", 60, 12)
+patch("gosh-terrain2048", 72, 12)
+patch("gosh-terrain2051", 72, 8)
+patch("gosh-terrain2038", 76, 16)
+patch("gosh-terrain2050", 72, 16)
+patch("gosh-terrain2047", 72, 20)
+patch("gosh-terrain2034", 72, 24)
+patch("gosh-terrain2033", 72, 28)
+patch("gosh-terrain2038", 72, 32)
+patch("gosh-terrain2042", 68, 32)
+patch("gosh-terrain2043", 64, 32)
+patch("gosh-terrain2054", 60, 32)
+patch("gosh-terrain2055", 56, 32)
+patch("gosh-terrain2030", 52, 32)
+patch("gosh-terrain2029", 52, 28)
+patch("gosh-terrain2048", 56, 28)
+patch("gosh-terrain2036", 56, 24)
+patch("gosh-terrain2041", 60, 24)
+patch("gosh-terrain2048", 64, 24)
+patch("gosh-terrain2045", 64, 20)
+patch("gosh-terrain2036", 64, 16)
+patch("gosh-terrain2036", 68, 12)
+patch("gosh-terrain2048", 68, 16)
+patch("gosh-terrain2039", 68, 8)
+patch("gosh-terrain2051", 68, 4)
+patch("gosh-terrain2050", 64, 4)
+patch("gosh-terrain2038", 64, 8)
+patch("gosh-terrain2050", 60, 8)
+patch("gosh-06", 64, 12)
+patch("gosh-06", 56, 16)
+patch("gosh-06", 60, 16)
+patch("gosh-06", 60, 20)
+patch("gosh-06", 56, 20)
+patch("gosh-06", 52, 24)
+patch("gosh-06", 36, 16)
+patch("gosh-06", 40, 16)
+patch("gosh-06", 40, 12)
+patch("gosh-06", 36, 12)
+patch("gosh-05", 48, 16)
+patch("gosh-05", 48, 12)
+patch("gosh-05", 48, 8)
+patch("gosh-05", 52, 8)
+patch("gosh-05", 56, 8)
+patch("gosh-05", 72, 4)
+patch("gosh-05", 68, 20)
+patch("gosh-05", 68, 24)
+patch("gosh-05", 68, 28)
+patch("gosh-05", 64, 28)
+patch("gosh-05", 60, 28)
+patch("gosh-terrain0011", 36, 8)
+patch("gosh-terrain0010", 40, 8)
+patch("gosh-terrain0017", 36, 4)
+patch("gosh-terrain0018", 40, 4)
+patch("gosh-terrain0023", 36, 0)
+patch("gosh-terrain0022", 40, 0)
+patch("gosh-terrain0026", 44, 0)
+patch("gosh-terrain0027", 32, 0)
+patch("gosh-terrain0002", 28, 0)
+patch("gosh-terrain0003", 48, 0)
+patch("gosh-06", 52, 0)
+patch("gosh-06", 56, 0)
+patch("gosh-06", 20, 36)
+patch("gosh-06", 20, 40)
+patch("gosh-06", 12, 36)
+patch("gosh-06", 16, 36)
+patch("gosh-06", 16, 40)
+patch("gosh-06", 12, 40)
+patch("gosh-06", 56, 36)
+patch("gosh-06", 56, 40)
+patch("gosh-06", 60, 36)
+patch("gosh-06", 60, 40)
+patch("gosh-06", 64, 36)
+patch("gosh-06", 64, 40)
+patch("gosh-terrain2029", 52, 44)
+patch("gosh-terrain2030", 52, 48)
+patch("gosh-terrain2028", 24, 44)
+patch("gosh-terrain2031", 24, 48)
+patch("gosh-06", 28, 48)
+patch("gosh-06", 48, 48)
+patch("gosh-terrain2037", 32, 52)
+patch("gosh-terrain2036", 44, 52)
+patch("gosh-terrain2036", 28, 52)
+patch("gosh-terrain2037", 48, 52)
+patch("gosh-terrain2041", 20, 44)
+patch("gosh-terrain2040", 16, 44)
+patch("gosh-terrain2052", 8, 44)
+patch("gosh-terrain2053", 12, 44)
+patch("gosh-terrain2053", 56, 44)
+patch("gosh-terrain2052", 64, 44)
+patch("gosh-terrain2040", 60, 44)
+patch("gosh-terrain2041", 68, 44)
+patch("gosh-terrain2037", 72, 44)
+patch("gosh-terrain2036", 4, 44)
+patch("gosh-terrain2046", 32, 56)
+patch("gosh-terrain2047", 32, 60)
+patch("gosh-terrain2033", 32, 64)
+patch("gosh-terrain2034", 32, 68)
+patch("gosh-terrain2032", 44, 56)
+patch("gosh-terrain2035", 44, 64)
+patch("gosh-terrain2044", 44, 60)
+patch("gosh-terrain2045", 44, 68)
+patch("gosh-terrain2039", 44, 72)
+patch("gosh-terrain2038", 32, 72)
+patch("gosh-terrain2042", 48, 72)
+patch("gosh-terrain2054", 52, 72)
+patch("gosh-terrain2055", 56, 72)
+patch("gosh-terrain2043", 28, 72)
+patch("gosh-terrain2054", 24, 72)
+patch("gosh-terrain2042", 20, 72)
+patch("gosh-terrain2043", 8, 76)
+patch("gosh-terrain2054", 4, 76)
+patch("gosh-terrain2050", 16, 72)
+patch("gosh-terrain2038", 16, 76)
+patch("gosh-terrain2039", 0, 76)
+patch("gosh-terrain2051", 60, 72)
+patch("gosh-terrain2039", 60, 76)
+patch("gosh-terrain2054", 64, 76)
+patch("gosh-terrain2042", 68, 76)
+patch("gosh-terrain2038", 76, 76)
+patch("gosh-terrain2046", 76, 72)
+patch("gosh-terrain2034", 76, 68)
+patch("gosh-terrain2033", 76, 64)
+patch("gosh-terrain2037", 76, 60)
+patch("gosh-terrain2044", 0, 72)
+patch("gosh-terrain2045", 0, 68)
+patch("gosh-terrain2036", 0, 60)
+patch("gosh-terrain2048", 4, 60)
+patch("gosh-terrain2045", 4, 56)
+patch("gosh-terrain2044", 4, 52)
+patch("gosh-terrain2032", 4, 48)
+patch("gosh-terrain2049", 72, 60)
+patch("gosh-terrain2046", 72, 56)
+patch("gosh-terrain2033", 72, 52)
+patch("gosh-terrain2034", 72, 48)
+patch("gosh-terrain2050", 20, 48)
+patch("gosh-terrain2048", 28, 56)
+patch("gosh-terrain2038", 20, 52)
+patch("gosh-terrain2036", 24, 56)
+patch("gosh-terrain2042", 16, 52)
+patch("gosh-terrain2044", 24, 60)
+patch("gosh-terrain2050", 12, 52)
+patch("gosh-terrain2048", 24, 64)
+patch("gosh-terrain2040", 20, 64)
+patch("gosh-terrain2033", 12, 56)
+patch("gosh-terrain2038", 12, 60)
+patch("gosh-terrain2036", 16, 64)
+patch("gosh-terrain2050", 8, 60)
+patch("gosh-terrain2048", 16, 68)
+patch("gosh-terrain2036", 12, 68)
+patch("gosh-terrain2038", 8, 64)
+patch("gosh-terrain2050", 4, 64)
+patch("gosh-terrain2048", 12, 72)
+patch("gosh-terrain2049", 4, 68)
+patch("gosh-terrain2049", 8, 72)
+patch("gosh-terrain2037", 8, 68)
+patch("gosh-terrain2036", 68, 68)
+patch("gosh-terrain2048", 72, 68)
+patch("gosh-terrain2048", 68, 72)
+patch("gosh-terrain2049", 64, 72)
+patch("gosh-terrain2051", 72, 64)
+patch("gosh-terrain2051", 68, 60)
+patch("gosh-terrain2049", 60, 68)
+patch("gosh-terrain2037", 64, 68)
+patch("gosh-terrain2039", 68, 64)
+patch("gosh-terrain2028", 60, 64)
+patch("gosh-terrain2030", 64, 60)
+patch("gosh-terrain2041", 56, 64)
+patch("gosh-terrain2045", 64, 56)
+patch("gosh-terrain2051", 64, 52)
+patch("gosh-terrain2049", 52, 64)
+patch("gosh-terrain2033", 52, 60)
+patch("gosh-terrain2054", 60, 52)
+patch("gosh-terrain2051", 56, 48)
+patch("gosh-terrain2049", 48, 56)
+patch("gosh-terrain2037", 52, 56)
+patch("gosh-terrain2039", 56, 52)
+patch("gosh-06", 52, 52)
+patch("gosh-06", 56, 56)
+patch("gosh-06", 60, 56)
+patch("gosh-06", 56, 60)
+patch("gosh-06", 60, 60)
+patch("gosh-06", 64, 64)
+patch("gosh-06", 12, 64)
+patch("gosh-06", 16, 56)
+patch("gosh-06", 16, 60)
+patch("gosh-06", 20, 60)
+patch("gosh-06", 20, 56)
+patch("gosh-06", 24, 52)
+patch("gosh-06", 0, 56)
+patch("gosh-06", 0, 52)
+patch("gosh-06", 76, 56)
+patch("gosh-06", 76, 52)
+patch("gosh-06", 76, 20)
+patch("gosh-06", 76, 24)
+patch("gosh-06", 20, 76)
+patch("gosh-06", 24, 76)
+patch("gosh-06", 56, 76)
+patch("gosh-06", 52, 76)
+patch("gosh-05", 56, 68)
+patch("gosh-05", 52, 68)
+patch("gosh-05", 48, 68)
+patch("gosh-05", 48, 64)
+patch("gosh-05", 48, 60)
+patch("gosh-05", 60, 48)
+patch("gosh-05", 64, 48)
+patch("gosh-05", 68, 48)
+patch("gosh-05", 68, 52)
+patch("gosh-05", 68, 56)
+patch("gosh-05", 72, 72)
+patch("gosh-05", 8, 48)
+patch("gosh-05", 8, 52)
+patch("gosh-05", 8, 56)
+patch("gosh-05", 12, 48)
+patch("gosh-05", 16, 48)
+patch("gosh-05", 28, 60)
+patch("gosh-05", 28, 64)
+patch("gosh-05", 28, 68)
+patch("gosh-05", 24, 68)
+patch("gosh-05", 20, 68)
+patch("gosh-05", 4, 72)
+patch("gosh-06", 36, 56)
+patch("gosh-06", 40, 56)
+patch("gosh-06", 36, 60)
+patch("gosh-06", 40, 60)
+patch("gosh-06", 36, 64)
+patch("gosh-06", 40, 64)
+patch("gosh-terrain0000", 40, 68)
+patch("gosh-terrain0001", 36, 68)
+patch("gosh-terrain0005", 40, 72)
+patch("gosh-terrain0007", 36, 72)
+patch("gosh-terrain0012", 32, 76)
+patch("gosh-terrain0013", 44, 76)
+patch("gosh-terrain0009", 48, 76)
+patch("gosh-terrain0008", 28, 76)
+patch("gosh-terrain0020", 36, 76)
+patch("gosh-terrain0021", 40, 76)
+patch("gosh-terrain0021", 0, 36)
+patch("gosh-terrain0022", 0, 40)
+patch("gosh-terrain0024", 4, 36)
+patch("gosh-terrain0014", 4, 40)
+patch("gosh-terrain0000", 8, 36)
+patch("gosh-terrain0003", 8, 40)
+patch("gosh-terrain0018", 0, 44)
+patch("gosh-terrain0019", 0, 32)
+patch("gosh-terrain0000", 0, 28)
+patch("gosh-terrain0003", 0, 48)
+patch("gosh-terrain0001", 76, 28)
+patch("gosh-terrain0002", 76, 48)
+patch("gosh-terrain0011", 68, 40)
+patch("gosh-terrain0008", 68, 36)
+patch("gosh-terrain0012", 72, 36)
+patch("gosh-terrain0015", 72, 40)
+patch("gosh-terrain0016", 76, 44)
+patch("gosh-terrain0017", 76, 32)
+patch("gosh-terrain0020", 76, 36)
+patch("gosh-terrain0023", 76, 40)
+patch("gosh-terrain0300", 40, 24)
+patch("gosh-terrain0301", 36, 24)
+patch("gosh-terrain0302", 36, 52)
+patch("gosh-terrain0303", 40, 52)
+patch("gosh-terrain0309", 52, 36)
+patch("gosh-terrain0308", 24, 36)
+patch("gosh-terrain0303", 52, 40)
+patch("gosh-terrain0302", 24, 40)
+patch("gosh-terrain3011", 28, 44)
+patch("gosh-terrain3010", 44, 48)
+patch("gosh-terrain0300", 44, 28)
+patch("gosh-06", 48, 28)
+patch("gosh-terrain0303", 48, 44)
+patch("gosh-terrain0300", 48, 32)
+patch("gosh-terrain0308", 32, 28)
+patch("gosh-terrain3011", 32, 48)
+patch("gosh-terrain0301", 28, 32)
+patch("gosh-terrain3020", 36, 28)
+patch("gosh-terrain3020", 32, 32)
+patch("gosh-terrain3020", 28, 36)
+patch("gosh-terrain3021", 44, 32)
+patch("gosh-terrain3021", 40, 28)
+patch("gosh-terrain3021", 48, 36)
+patch("gosh-terrain3022", 48, 40)
+patch("gosh-terrain3022", 44, 44)
+patch("gosh-terrain3022", 40, 48)
+patch("gosh-terrain3023", 36, 48)
+patch("gosh-terrain3023", 32, 44)
+patch("gosh-terrain3023", 28, 40)
+patch("gosh-terrain4009", 40, 32)
+patch("gosh-terrain4010", 40, 44)
+patch("gosh-terrain4011", 32, 40)
+patch("gosh-terrain4008", 32, 36)
+patch("gosh-terrain4002", 36, 44)
+patch("gosh-terrain4001", 36, 32)
+patch("gosh-terrain4000", 44, 36)
+patch("gosh-terrain4003", 44, 40)
+patch("gosh-terrain4022", 40, 40)
+patch("gosh-terrain4023", 36, 40)
+patch("gosh-terrain4003", 44, 40)
+patch("gosh-terrain4022", 40, 40)
+patch("gosh-terrain4023", 36, 40)
+patch("gosh-terrain4020", 36, 36)
+patch("gosh-terrain4021", 40, 36)
+patch("gosh-terrain2044", 0, 64)
+patch("gosh-terrain2045", 0, 8)
+patch("gosh-terrain2042", 12, 76)
+patch("gosh-terrain2043", 72, 76)
+
